--- a/ai-therapy/tsconfig.json
+++ b/ai-therapy/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "jsx": "react-native",
+    "types": ["react", "react-native"],
     "strict": true,
     "paths": {
       "@/*": [
